test_suite/alan-2022-examples/failing/004970_mutation.alan
source i begin leave m and end end
